--- a/packages/gitlab/compositions/project/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/project/test/scenarios/standard/claim.yaml
@@ -4,8 +4,15 @@ metadata:
   name: gitlab
   namespace: gitlab
 spec:
-  parameters: {}
-
+  parameters:
+    project:
+      name: project
+      groupName: group
+      members:
+      - gitlabUserID: 1
+        role: 50
+      - gitlabUserID: 2
+        role: 50
   providerConfigsRef:
     gitlabProvider: gitlab-provider
   managementPolicies:
