--- a/packages/nb-config/compositions/nboperatorbootstrap/resources/composition.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/resources/composition.yaml
@@ -3,10 +3,10 @@ kind: Composition
 metadata:
   name: nboperatorbootstrap
   labels:
-    crossplane.io/xrd: xnboperatorbootstrap.nb.infitx.org
+    crossplane.io/xrd: xnboperatorbootstrap.nb.mojaloop.io
 spec:
   compositeTypeRef:
-    apiVersion: nb.infitx.org/v1alpha1
+    apiVersion: nb.mojaloop.io/v1alpha1
     kind: XNBOperatorBootstrap
   mode: Pipeline
   pipeline:
