--- a/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xnboperatorbootstrap.nb.infitx.org
+  name: xnboperatorbootstrap.nb.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
-  group: nb.infitx.org
+  group: nb.mojaloop.io
   names:
     kind: XNBOperatorBootstrap
     plural: xnboperatorbootstrap
