--- a/packages/nb-config/compositions/post-config/resources/definition.yaml
+++ b/packages/nb-config/compositions/post-config/resources/definition.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xpostconfig.nb.infitx.org
+  name: xpostconfig.nb.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
-  group: nb.infitx.org
+  group: nb.mojaloop.io
   names:
     kind: XPostConfig
     plural: xpostconfig
