--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xnboperatorinstall.sc.infitx.org
+  name: xnboperatorinstall.sc.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
-  group: sc.infitx.org
+  group: sc.mojaloop.io
   names:
     kind: XNBOperatorInstall
     plural: xnboperatorinstall
