fix: make local secret name a variable

--- a/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
@@ -106,6 +106,9 @@ spec:
                     accessToken:
                       type: object
                       properties:
+                        localSecretName:
+                          type: string
+                          description: "token secret name"
                         destinationType:
                           type: string
                           description: The type of destination to store the access token.
