fix: external name service for docdb cluster

--- a/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
@@ -8,6 +8,7 @@ spec:
     - "*"
   providerConfigsRef:
       awsProviderConfigName: "aws-provider"
+      ccK8sProviderName: "provider-kubernetes"
   parameters:
     allowMajorVersionUpgrade: false
     applyImmediately: false
