--- a/packages/aws-docdbcluster/compositions/docdbcluster/resources/definition.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/resources/definition.yaml
@@ -47,15 +47,26 @@ spec:
                   awsProviderConfigName:
                     type: string
                     description: AWS Provider Config Name
+                  ccK8sProviderName:
+                    type: string
+                    description: |-
+                      The name of the provider config to use for the local k8s provider.
               parameters:
                 type: object
                 properties:
+                  externalServiceName:
+                    type: string
+                    description: Name for the external service object created
+                  appNamespace:
+                    type: string
+                    description: Namespace for the consumer application
                   databaseName:
                     type: string
                     description: Name for the created DB
                   allowMajorVersionUpgrade:
                     description: Indicates that major version upgrades are allowed
                     type: boolean
+                    default: false
                   applyImmediately:
                     description: Indicates that changes should be applied immediately
                     type: boolean
@@ -68,6 +79,7 @@ spec:
                   copyTagsToSnapshot:
                     description: Indicates that tags should be copied to snapshots
                     type: boolean
+                    default: true
                   deletionProtection:
                     description: Indicates that deletion protection is enabled
                     type: boolean
@@ -86,6 +98,7 @@ spec:
                   enablePerformanceInsights:
                     description: Indicates that performance insights are enabled
                     type: boolean
+                    default: false
                   instanceCount:
                     description: The number of instances in the cluster
                     type: integer
@@ -154,7 +167,7 @@ spec:
                     description: The name of master user
                     type: string
                   vpcCidr:
-                    description: Vpc CIDR
+                    description: Comma separated Vpc CIDR blocks
                     type: string
                   vpcId:
                     description: Vpc id
