fix: groupid as int

--- a/packages/gitlab/compositions/group/resources/definition.yaml
+++ b/packages/gitlab/compositions/group/resources/definition.yaml
@@ -130,4 +130,4 @@ spec:
             type: object
             properties:
               groupId:
-                type: string
+                type: integer
