fix: dummy expiration

--- a/packages/gitlab/compositions/post-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/post-config/resources/definition.yaml
@@ -69,6 +69,7 @@ spec:
                     type: string
                     description: |-
                       The fqdn for vault api.
+                    default: vault.cluster.mojaloop.io
                   privateRepoUser:
                     type: string
                     description: |-
