fix: change param to string

--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -79,4 +79,4 @@ spec:
                     operatorSyncWave:
                       type: string
                       description: Sync wave for operator deployment.
-                      default: 0
+                      default: "0"
