feat: calculate token expiry

--- a/packages/gitlab/compositions/post-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/post-config/resources/definition.yaml
@@ -80,3 +80,8 @@ spec:
                     description: |-
                       Repo location for private iac.
                     default: platform
+          status:
+            type: object
+            properties:
+              tokenExpireAt:
+                type: string
