fix: missing mocked resource tenancy-internal

--- a/packages/gitlab/compositions/post-config/test/scenarios/standard/observed.yaml
+++ b/packages/gitlab/compositions/post-config/test/scenarios/standard/observed.yaml
@@ -6,3 +6,12 @@ metadata:
 status:
   atProvider:
     id: 1000
+---
+apiVersion: gitlab.mojaloop.io/v1alpha1
+kind: Group
+metadata:
+  annotations:
+    crossplane.io/composition-resource-name: tenancy-internal
+status:
+  atProvider:
+    id: 1001
