fix: miss param

--- a/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
@@ -79,6 +79,10 @@ spec:
                     operatorKubeapiGroup:
                       type: string
                       description: group name to give access to kubeapi
+                    operatorNamespace:
+                      type: string
+                      description: Namespace for operator install.
+                      default: "netbird-op"
                     zitadelProjectIdSecret:
                       type: object
                       properties:
