--- a/packages/sc-mongodbcluster/configuration/crossplane.yaml
+++ b/packages/sc-mongodbcluster/configuration/crossplane.yaml
@@ -6,12 +6,12 @@ metadata:
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
-      version: ">=v0.14.1"
+      version: "v0.15.0"
     ## Functions
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
-      version: ">=v0.9.0"
+      version: "v0.9.0"
     - function: xpkg.upbound.io/crossplane-contrib/function-auto-ready
-      version: ">=v0.2.1"
+      version: "v0.2.1"
   crossplane:
     version: ">=v1.14"
   skipDependencyResolution: true
