--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -229,6 +229,8 @@ spec:
                           expose:
                             type: object
                             properties:
+                              enabled:
+                                type: boolean
                               type:
                                 type: string
                   backup:
