fix: add new ns param

--- a/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/resources/definition.yaml
@@ -113,6 +113,9 @@ spec:
                         localSecretName:
                           type: string
                           description: "token secret name"
+                        localSecretNamespace:
+                          type: string
+                          description: "token secret namespace"
                         destinationType:
                           type: string
                           description: The type of destination to store the access token.
